[gd_scene load_steps=2 format=3 uid="uid://c2hqrfw7bpouf"]

[ext_resource type="Script" uid="uid://clnb1h7vbb40p" path="res://scripts/Main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="IntroPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="IntroPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="IntroPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CHAOS OBSERVATORY"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="IntroPanel/VBoxContainer"]
layout_mode = 2
text = "Calibration Protocol v1.0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="IntroPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="IntroPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "Welcome, Researcher.

You are about to calibrate the Observatory's Field Simulation.

Your precision in the early calibration steps will dramatically affect the final outcome.

Press START to begin."
fit_content = true

[node name="Spacer2" type="Control" parent="IntroPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="IntroPanel/VBoxContainer"]
layout_mode = 2
text = "START CALIBRATION"

[node name="TaskContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="IntroPanel/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
